# molenc

./: .gitignore  INSTALL.txt  Makefile  README.md  TODO  common.py  fcodec  feats.py  kb_test.sh  list_features.py  mol_frag_test.sh  molenc.opam  molenc.py  ph4_type_atoms.py  rfp  tani_est.gpl  test.sh  test_BBAD.sh  test_sdf_read.sh  test_uhd.sh  type_atoms.py
data/: 3.frags  3.mols  3.to_frag  3_frags.smi  3_frags.txt  3_genmols.smi  3_genmols.txt  3_genmols_uniq.smi  ALDH1_2conf.ph4  AP_test.smi.dix.ref  AP_test.txt.ref  air_passengers.csv  alcools.AD.ref  alcools.smi  caff_coca_feats.ref  caffeine.smi  caffeine_feats.ref  caffeine_types.ref  chembl1868_std.AP  chembl30_10mols.sdf  chembl30_10mols.txt.ref  chembl30_10mols_am1bcc.mol2  chembl_antivirals.frags.smi  chembl_antivirals.genmol.smi  chembl_antivirals.smi  chemical_formulas.txt  cisapride.smi  co_1conf.sdf  cocaine.smi  ethanol.smi  ethanol.uhd.dix.ref  ethanol.uhd.ref  fda_approved.smi  features.txt  h2o_1conf.sdf  opio.smi  ptable.txt  test_HYD_group.sdf  test_HYD_group.smi  test_mols.txt
src/: AP_BBAD.ml  BBAD.ml  KBE.ml  MSE_mol.ml  MST.ml  WMH.ml  ap_encoder.ml  ap_types.ml  atom.ml  atom_env.ml  atom_pair.ml  atom_pairs.ml  bloom.ml  butina.ml  chemsimp.ml  decoder.ml  dsmi.ml  dune  eltFCaroNeighbs.ml  encoder.ml  filter.ml  finder.ml  fingerprint.ml  formula.ml  fpMol.ml  fp_test.ml  fragmentable_mol.ml  gen_bindings.sh  get_mol.ml  get_sdf_tag.ml  gnuplot.ml  gram.ml  index.ml  indexer.ml  jbuild  kb_encode.ml  lean.ml  lig_box.ml  merge.ml  mini_mol.ml  (+40 more)
