opam-version: "1.2"
name: "molenc"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
homepage: "https://github.com/UnixJunkie/rd-ap-molenc"
bug-reports: "https://github.com/UnixJunkie/rd-ap-molenc/issues"
dev-repo: "https://github.com/UnixJunkie/rd-ap-molenc.git"
license: "BSD-3"
build: [
  [make]
]
# install: [
#   ["cp"  "_build/default/src/test.exe" "%{bin}%/cftr_qsar_test"]
# ]
# remove: [
#   ["sh" "-c" "rm -f %{bin}%/cftr_qsar_test"]
# ]
depends: [
  "dune" {build}
  "batteries"
  "dolog"
  "parmap"
  "cpm"
  "minicli"
  "svm"
  "bst"
]
