
(library
  (name molenc)
  (public_name molenc)
  (modules ap_types atom_env fingerprint fpMol mini_mol MSE_mol myList
           node piEltHA scale utls WMH KBE)
  (libraries batteries dolog bitv bst))

;; installed executables / public targets
(executables
  (names encoder decoder filter kb_encode)
  (public_names molenc_e molenc_d molenc_f molenc_kbe)
  (modules encoder decoder filter kb_encode)
  (libraries molenc bst batteries dolog minicli))

;; never installed executables
(executables
  (names fp_test wmh_test wmh_bench)
  (modules fp_test wmh_test wmh_bench)
  (libraries molenc batteries dolog minicli))
