
(library
  (name molenc)
  (public_name molenc)
  (modules ap_types atom_env fingerprint fpMol atom_pair mini_mol MSE_mol
           myList node piEltHA scale utls WMH norm bloom index rdkit sdf_3D gram ptable)
  (libraries batteries dolog bst parany pyml vector3 line_oriented str))

;; installed executables / public targets
(executables
  (names encoder decoder filter butina pubchem_decoder uniq to_dense get_mol
         rank ap_encoder prune merge MST lig_box shannon fragmentable_mol
         indexer pareto finder AP_BBAD split sdf_read dsmi BBAD molenc_AP molenc_UHD shuf)
  (public_names molenc_e molenc_d molenc_filter molenc_cluster
                molenc_pubchem_decoder molenc_uniq molenc_dense molenc_get
                molenc_rank molenc_ap molenc_prune molenc_merge molenc_mst
                molenc_ligbox molenc_shannon molenc_frag molenc_indexer
                molenc_pareto molenc_finder molenc_apbbad molenc_split
                molenc_sdf_read molenc_dsmi molenc_bbad molenc_AP molenc_UHD molenc_shuf)
  (modules encoder decoder filter butina pubchem_decoder uniq to_dense get_mol
           sybyl syb_atom mol2 sdf smi ph4 rank ap_encoder prune merge MST
           palette gnuplot lig_box shannon fragmentable_mol indexer pareto
           finder AP_BBAD split sdf_read dsmi BBAD molenc_AP molenc_UHD shuf)
  (libraries molenc bst batteries dolog minicli parany cpm dokeysto
             ocamlgraph vector3 line_oriented pyml))

;; never installed executables
(executables
  (names fp_test wmh_test wmh_bench wmh_unit_test test_RS)
  (modules fp_test wmh_test wmh_bench wmh_unit_test test_RS)
  (libraries molenc batteries dolog minicli))
